@@ -4,6 +4,8 @@
 
 Bug fixes:
 - Fix a crash bug in Poseidon.
+- Win32 interface: fix compatibility with recent versions of ActivePerl.
+- Fix display of Clown/Gypsy class name.
 
 
 ==================
